详情页链接修改

--- a/pages/Ins3.html
+++ b/pages/Ins3.html
@@ -138,19 +138,19 @@
                     <div class="colu_news">
                         <ul class="colu_news_list">
                             <li>
-                                <a href="#">2008“广东流通业三十年回顾与展望”高峰论坛</a>
+                                <a href="../info/info-1.html">2008“广东流通业三十年回顾与展望”高峰论坛</a>
                             </li>
                             <li>
-                                <a href="#">2005“珠江三角洲经济发展与流通现代化”研讨会</a>
+                                <a href="../info/info-2.html">2005“珠江三角洲经济发展与流通现代化”研讨会</a>
                             </li>
                             <li>
-                                <a href="#">2004广东流通产业竞争力高峰论坛</a>
+                                <a href="../info/info-3.html">2004广东流通产业竞争力高峰论坛</a>
                             </li>
                             <li>
-                                <a href="#">2007“广东省流通业转型问题”学术研讨会</a>
+                                <a href="../info/info-4.html">2007“广东省流通业转型问题”学术研讨会</a>
                             </li>
                             <li>
-                                <a href="#">2005“珠江三角洲经济发展与流通现代化”研讨会</a>
+                                <a href="../info/info-5.html">2005“珠江三角洲经济发展与流通现代化”研讨会</a>
                             </li>
                         </ul>
                     </div>
@@ -163,19 +163,19 @@
                     <div class="colu_news">
                         <ul class="colu_news_list">
                             <li>
-                                <a href="#">肖怡：“新零售”的提出</a>
+                                <a href="../info/info-6.html">肖怡：“新零售”的提出</a>
                             </li>
                             <li>
-                                <a href="#">彭雷清教授申报课题获教</a>
+                                <a href="../info/info-7.html">彭雷清教授申报课题获教</a>
                             </li>
                             <li>
-                                <a href="#">广东财经大学流通经济研究所与湖北康华智慧物流园成立商贸物流产学研基地</a>
+                                <a href="../info/info-7.html">广东财经大学流通经济研究所与湖北康华智慧物流园成立商贸物流产学研基地</a>
                             </li>
                             <li>
-                                <a href="#">王先庆：带有体验性的商</a>
+                                <a href="../info/info-8.html">王先庆：带有体验性的商</a>
                             </li>
                             <li>
-                                <a href="#">王先庆：产业轻化转型 引领区域创新</a>
+                                <a href="../info/info-9.html">王先庆：产业轻化转型 引领区域创新</a>
                             </li>
                         </ul>
                     </div>
@@ -190,19 +190,19 @@
                     <div class="colu_news">
                         <ul class="colu_news_list">
                             <li>
-                                <a href="#">广东省商业经济学会招聘</a>
+                                <a href="../info/info-11.html">广东省商业经济学会招聘</a>
                             </li>
                             <li>
-                                <a href="#">重磅：“华南商界</a>
+                                <a href="../info/info-12.html">重磅：“华南商界</a>
                             </li>
                             <li>
-                                <a href="#">王先庆课题组研究报告获</a>
+                                <a href="../info/info-1.html">王先庆课题组研究报告获</a>
                             </li>
                             <li>
-                                <a href="#">流通所承办首届华南现代物流学术年会</a>
+                                <a href="../info/info-2.html">流通所承办首届华南现代物流学术年会</a>
                             </li>
                             <li>
-                                <a href="#">流通所承办首届华</a>
+                                <a href="../info/info-3.html">流通所承办首届华</a>
                             </li>
                         </ul>
                     </div>
