--- a/pages/academic1.html
+++ b/pages/academic1.html
@@ -140,46 +140,46 @@
                 <div class="detail">
                     <ul>
                         <li>
-                            <a href="#">来访交流1 </a>
+                            <a href="../info/info-1.html">来访交流1 </a>
                         </li>
                         <li>
-                            <a href="#">来访交流2</a>
+                            <a href="../info/info-2.html">来访交流2</a>
                         </li>
                         <li>
-                            <a href="#">来访交流3 </a>
+                            <a href="../info/info-3.html">来访交流3 </a>
                         </li>
                         <li>
-                            <a href="#">来访交流4 </a>
+                            <a href="../info/info-4.html">来访交流4 </a>
                         </li>
                         <li>
-                            <a href="#">来访交流5 </a>
+                            <a href="../info/info-5.html">来访交流5 </a>
                         </li>
                         <li>
-                            <a href="#">来访交流6 </a>
+                            <a href="../info/info-6.html">来访交流6 </a>
                         </li>
                         <li>
-                            <a href="#">来访交流7 </a>
+                            <a href="../info/info-7.html">来访交流7 </a>
                         </li>
                         <li>
-                            <a href="#">来访交流8 </a>
+                            <a href="../info/info-8.html">来访交流8 </a>
                         </li>
                         <li>
-                            <a href="#">来访交流9 </a>
+                            <a href="../info/info-9.html">来访交流9 </a>
                         </li>
                         <li>
-                            <a href="#">来访交流10 </a>
+                            <a href="../info/info-10.html">来访交流10 </a>
                         </li>
                         <li>
-                            <a href="#">来访交流11 </a>
+                            <a href="../info/info-11.html">来访交流11 </a>
                         </li>
                         <li>
-                            <a href="#">来访交流12 </a>
+                            <a href="../info/info-12.html">来访交流12 </a>
                         </li>
                         <li>
-                            <a href="#">来访交流13 </a>
+                            <a href="../info/info-1.html">来访交流13 </a>
                         </li>
                         <li>
-                            <a href="#">来访交流14 </a>
+                            <a href="../info/info-2.html">来访交流14 </a>
                         </li>
                     </ul>
                 </div>
