--- a/pages/academic2.html
+++ b/pages/academic2.html
@@ -140,46 +140,46 @@
                 <div class="detail">
                     <ul>
                         <li>
-                            <a href="#">调研考察1 </a>
+                            <a href="../info/info-1.html">调研考察1 </a>
                         </li>
                         <li>
-                            <a href="#">调研考察2</a>
+                            <a href="../info/info-1.html">调研考察2</a>
                         </li>
                         <li>
-                            <a href="#">调研考察3</a>
+                            <a href="../info/info-1.html">调研考察3</a>
                         </li>
                         <li>
-                            <a href="#">调研考察4 </a>
+                            <a href="../info/info-1.html">调研考察4 </a>
                         </li>
                         <li>
-                            <a href="#">调研考察5 </a>
+                            <a href="../info/info-1.html">调研考察5 </a>
                         </li>
                         <li>
-                            <a href="#">调研考察6 </a>
+                            <a href="../info/info-1.html">调研考察6 </a>
                         </li>
                         <li>
-                            <a href="#">调研考察7 </a>
+                            <a href="../info/info-1.html">调研考察7 </a>
                         </li>
                         <li>
-                            <a href="#">调研考察8 </a>
+                            <a href="../info/info-1.html">调研考察8 </a>
                         </li>
                         <li>
-                            <a href="#">调研考察9 </a>
+                            <a href="../info/info-1.html">调研考察9 </a>
                         </li>
                         <li>
-                            <a href="#">调研考察10 </a>
+                            <a href="../info/info-1.html">调研考察10 </a>
                         </li>
                         <li>
-                            <a href="#">调研考察11</a>
+                            <a href="../info/info-1.html">调研考察11</a>
                         </li>
                         <li>
-                            <a href="#">调研考察12 </a>
+                            <a href="../info/info-1.html">调研考察12 </a>
                         </li>
                         <li>
-                            <a href="#">调研考察13 </a>
+                            <a href="../info/info-1.html">调研考察13 </a>
                         </li>
                         <li>
-                            <a href="#">调研考察14 </a>
+                            <a href="../info/info-1.html">调研考察14 </a>
                         </li>
                     </ul>
                 </div>
