--- a/pages/academic3.html
+++ b/pages/academic3.html
@@ -140,46 +140,46 @@
                 <div class="detail">
                     <ul>
                         <li>
-                            <a href="#">主办年会1 </a>
+                            <a href="../info/info-1.html">主办年会1 </a>
                         </li>
                         <li>
-                            <a href="#">主办年会2</a>
+                            <a href="../info/info-2.html">主办年会2</a>
                         </li>
                         <li>
-                            <a href="#">主办年会3</a>
+                            <a href="../info/info-3.html">主办年会3</a>
                         </li>
                         <li>
-                            <a href="#">主办年会4 </a>
+                            <a href="../info/info-4.html">主办年会4 </a>
                         </li>
                         <li>
-                            <a href="#">主办年会5 </a>
+                            <a href="../info/info-5.html">主办年会5 </a>
                         </li>
                         <li>
-                            <a href="#">主办年会6 </a>
+                            <a href="../info/info-6.html">主办年会6 </a>
                         </li>
                         <li>
-                            <a href="#">主办年会7 </a>
+                            <a href="../info/info-7.html">主办年会7 </a>
                         </li>
                         <li>
-                            <a href="#">主办年会8 </a>
+                            <a href="../info/info-8.html">主办年会8 </a>
                         </li>
                         <li>
-                            <a href="#">主办年会9 </a>
+                            <a href="../info/info-9.html">主办年会9 </a>
                         </li>
                         <li>
-                            <a href="#">主办年会10 </a>
+                            <a href="../info/info-10.html">主办年会10 </a>
                         </li>
                         <li>
-                            <a href="#">主办年会11</a>
+                            <a href="../info/info-11.html">主办年会11</a>
                         </li>
                         <li>
-                            <a href="#">主办年会12 </a>
+                            <a href="../info/info-12.html">主办年会12 </a>
                         </li>
                         <li>
-                            <a href="#">主办年会13</a>
+                            <a href="../info/info-1.html">主办年会13</a>
                         </li>
                         <li>
-                            <a href="#">主办年会14 </a>
+                            <a href="../info/info-2.html">主办年会14 </a>
                         </li>
                     </ul>
                 </div>
