--- a/pages/academic4.html
+++ b/pages/academic4.html
@@ -105,7 +105,7 @@
                         <img src="../images/academic1.png" alt="">
                     </div>
                     <div class="line">
-                        <a href="#">学术交流</a>
+                        <a href="../info/info-1.html">学术交流</a>
                     </div>
                 </div>
 
@@ -140,46 +140,46 @@
                 <div class="detail">
                     <ul>
                         <li>
-                            <a href="#">流通论坛1 </a>
+                            <a href="../info/info-1.html">流通论坛1 </a>
                         </li>
                         <li>
-                            <a href="#">流通论坛2</a>
+                            <a href="../info/info-2.html">流通论坛2</a>
                         </li>
                         <li>
-                            <a href="#">流通论坛3</a>
+                            <a href="../info/info-3.html">流通论坛3</a>
                         </li>
                         <li>
-                            <a href="#">流通论坛4 </a>
+                            <a href="../info/info-4.html">流通论坛4 </a>
                         </li>
                         <li>
-                            <a href="#">流通论坛5 </a>
+                            <a href="../info/info-5.html">流通论坛5 </a>
                         </li>
                         <li>
-                            <a href="#">流通论坛6 </a>
+                            <a href="../info/info-1.html">流通论坛6 </a>
                         </li>
                         <li>
-                            <a href="#">流通论坛7 </a>
+                            <a href="../info/info-6.html">流通论坛7 </a>
                         </li>
                         <li>
-                            <a href="#">流通论坛8 </a>
+                            <a href="../info/info-7.html">流通论坛8 </a>
                         </li>
                         <li>
-                            <a href="#">流通论坛9 </a>
+                            <a href="../info/info-1.html">流通论坛9 </a>
                         </li>
                         <li>
-                            <a href="#">流通论坛10 </a>
+                            <a href="../info/info-8.html">流通论坛10 </a>
                         </li>
                         <li>
-                            <a href="#">流通论坛11</a>
+                            <a href="../info/info-9.html">流通论坛11</a>
                         </li>
                         <li>
-                            <a href="#">流通论坛12 </a>
+                            <a href="../info/info-10.html">流通论坛12 </a>
                         </li>
                         <li>
-                            <a href="#">流通论坛13</a>
+                            <a href="../info/info-11.html">流通论坛13</a>
                         </li>
                         <li>
-                            <a href="#">流通论坛14 </a>
+                            <a href="../info/info-12.html">流通论坛14 </a>
                         </li>
                     </ul>
                 </div>
@@ -192,9 +192,9 @@
     <footer>
         <div class='footer-box'>
             <div class="footer-link">
-                <a href="#" target="_blank" title="意见反馈">意见反馈</a>
-                <a href="#" target="_blank" title="友情链接">友情链接</a>
-                <a href="#" target="_blank" title="友情链接">管理登录</a>
+                <a href="../info/info-1.html" target="_blank" title="意见反馈">意见反馈</a>
+                <a href="../info/info-1.html" target="_blank" title="友情链接">友情链接</a>
+                <a href="../info/info-1.html" target="_blank" title="友情链接">管理登录</a>
 
             </div>
             <div class='footer-copyright'>
