--- a/pages/archi1.html
+++ b/pages/archi1.html
@@ -105,7 +105,7 @@
                         <img src="../images/research1.png" alt="">
                     </div>
                     <div class="line">
-                        <a href="#">科研成果</a>
+                        <a href="../info/info-1.html">科研成果</a>
                     </div>
                 </div>
 
@@ -137,47 +137,47 @@
                 <div class="detail">
                     <ul>
                         <li>
-                            <a href="#">学术论文1 </a>
+                            <a href="../info/info-1.html">学术论文1 </a>
                         </li>
                         <li>
-                            <a href="#">学术论文2</a>
+                            <a href="../info/info-2.html">学术论文2</a>
                         </li>
                         <li>
-                            <a href="#">学术论文3 </a>
+                            <a href="../info/info-3.html">学术论文3 </a>
                         </li>
                         <li>
-                            <a href="#">学术论文4 </a>
+                            <a href="../info/info-4.html">学术论文4 </a>
                         </li>
                         <li>
-                            <a href="#">学术论文5 </a>
+                            <a href="../info/info-5.html">学术论文5 </a>
                         </li>
                         <li>
-                            <a href="#">学术论文6 </a>
+                            <a href="../info/info-6.html">学术论文6 </a>
                         </li>
                         <li>
-                            <a href="#">学术论文7 </a>
+                            <a href="../info/info-7.html">学术论文7 </a>
                         </li>
                         <li>
-                            <a href="#">学术论文8 </a>
+                            <a href="../info/info-8.html">学术论文8 </a>
                         </li>
                         <li>
-                            <a href="#">学术论文9 </a>
+                            <a href="../info/info-9.html">学术论文9 </a>
                         </li>
                         <li>
-                            <a href="#">学术论文10 </a>
+                            <a href="../info/info-10.html">学术论文10 </a>
                         </li>
                         <li>
-                            <a href="#">学术论文11
+                            <a href="../info/info-11.html">学术论文11
                                 <a>
                         </li>
                         <li>
-                            <a href="#">学术论文12 </a>
+                            <a href="../info/info-12.html">学术论文12 </a>
                         </li>
                         <li>
-                            <a href="#">学术论文13 </a>
+                            <a href="../info/info-1.html">学术论文13 </a>
                         </li>
                         <li>
-                            <a href="#">学术论文14 </a>
+                            <a href="../info/info-2.html">学术论文14 </a>
                         </li>
                     </ul>
                 </div>
@@ -190,9 +190,9 @@
     <footer>
         <div class='footer-box'>
             <div class="footer-link">
-                <a href="#" target="_blank" title="意见反馈">意见反馈</a>
-                <a href="#" target="_blank" title="友情链接">友情链接</a>
-                <a href="#" target="_blank" title="友情链接">管理登录</a>
+                <a href="../info/info-1.html" target="_blank" title="意见反馈">意见反馈</a>
+                <a href="../info/info-1.html" target="_blank" title="友情链接">友情链接</a>
+                <a href="../info/info-1.html" target="_blank" title="友情链接">管理登录</a>
 
             </div>
             <div class='footer-copyright'>
