--- a/pages/construct2.html
+++ b/pages/construct2.html
@@ -105,7 +105,7 @@
                         <img src="../images/construct1.png" alt="">
                     </div>
                     <div class="line">
-                        <a href="#">智库建设</a>
+                        <a href="../info/info-1.html">智库建设</a>
                     </div>
                 </div>
 
@@ -134,46 +134,46 @@
                 <div class="detail">
                     <ul>
                         <li>
-                            <a href="#">智库动态1 </a>
+                            <a href="../info/info-1.html">智库动态1 </a>
                         </li>
                         <li>
-                            <a href="#">智库动态2</a>
+                            <a href="../info/info-2.html">智库动态2</a>
                         </li>
                         <li>
-                            <a href="#">智库动态3 </a>
+                            <a href="../info/info-4.html">智库动态3 </a>
                         </li>
                         <li>
-                            <a href="#">智库动态4 </a>
+                            <a href="../info/info-3.html">智库动态4 </a>
                         </li>
                         <li>
-                            <a href="#">智库动态5 </a>
+                            <a href="../info/info-5.html">智库动态5 </a>
                         </li>
                         <li>
-                            <a href="#">智库动态6 </a>
+                            <a href="../info/info-6.html">智库动态6 </a>
                         </li>
                         <li>
-                            <a href="#">智库动态7 </a>
+                            <a href="../info/info-7.html">智库动态7 </a>
                         </li>
                         <li>
-                            <a href="#">智库动态8 </a>
+                            <a href="../info/info-1.html">智库动态8 </a>
                         </li>
                         <li>
-                            <a href="#">智库动态9 </a>
+                            <a href="../info/info-8.html">智库动态9 </a>
                         </li>
                         <li>
-                            <a href="#">智库动态10 </a>
+                            <a href="../info/info-9.html">智库动态10 </a>
                         </li>
                         <li>
-                            <a href="#">智库动态11</a>
+                            <a href="../info/info-10.html">智库动态11</a>
                         </li>
                         <li>
-                            <a href="#">智库动态12 </a>
+                            <a href="../info/info-11.html">智库动态12 </a>
                         </li>
                         <li>
-                            <a href="#">智库动态13 </a>
+                            <a href="../info/info-12.html">智库动态13 </a>
                         </li>
                         <li>
-                            <a href="#">智库动态14 </a>
+                            <a href="../info/info-1.html">智库动态14 </a>
                         </li>
                     </ul>
                 </div>
@@ -187,9 +187,9 @@
     <footer>
         <div class='footer-box'>
             <div class="footer-link">
-                <a href="#" target="_blank" title="意见反馈">意见反馈</a>
-                <a href="#" target="_blank" title="友情链接">友情链接</a>
-                <a href="#" target="_blank" title="友情链接">管理登录</a>
+                <a href="../info/info-1.html" target="_blank" title="意见反馈">意见反馈</a>
+                <a href="../info/info-1.html" target="_blank" title="友情链接">友情链接</a>
+                <a href="../info/info-1.html" target="_blank" title="友情链接">管理登录</a>
 
             </div>
             <div class='footer-copyright'>
