--- a/pages/consult1.html
+++ b/pages/consult1.html
@@ -105,7 +105,7 @@
                         <img src="../images/consult1.png" alt="">
                     </div>
                     <div class="line">
-                        <a href="#">咨询培训</a>
+                        <a href="../info/info-1.html">咨询培训</a>
                     </div>
                 </div>
 
@@ -137,47 +137,47 @@
                 <div class="detail">
                     <ul>
                         <li>
-                            <a href="#">咨询顾问1 </a>
+                            <a href="../info/info-1.html">咨询顾问1 </a>
                         </li>
                         <li>
-                            <a href="#">咨询顾问2</a>
+                            <a href="../info/info-2.html">咨询顾问2</a>
                         </li>
                         <li>
-                            <a href="#">咨询顾问3 </a>
+                            <a href="../info/info-3.html">咨询顾问3 </a>
                         </li>
                         <li>
-                            <a href="#">咨询顾问4 </a>
+                            <a href="../info/info-4.html">咨询顾问4 </a>
                         </li>
                         <li>
-                            <a href="#">咨询顾问5 </a>
+                            <a href="../info/info-5.html">咨询顾问5 </a>
                         </li>
                         <li>
-                            <a href="#">咨询顾问6 </a>
+                            <a href="../info/info-6.html">咨询顾问6 </a>
                         </li>
                         <li>
-                            <a href="#">咨询顾问7 </a>
+                            <a href="../info/info-7.html">咨询顾问7 </a>
                         </li>
                         <li>
-                            <a href="#">咨询顾问8 </a>
+                            <a href="../info/info-8.html">咨询顾问8 </a>
                         </li>
                         <li>
-                            <a href="#">咨询顾问9 </a>
+                            <a href="../info/info-9.html">咨询顾问9 </a>
                         </li>
                         <li>
-                            <a href="#">咨询顾问10 </a>
+                            <a href="../info/info-10.html">咨询顾问10 </a>
                         </li>
                         <li>
-                            <a href="#">咨询顾问11
+                            <a href="../info/info-11.html">咨询顾问11
                                 <a>
                         </li>
                         <li>
-                            <a href="#">咨询顾问12 </a>
+                            <a href="../info/info-12.html">咨询顾问12 </a>
                         </li>
                         <li>
-                            <a href="#">咨询顾问13 </a>
+                            <a href="../info/info-1.html">咨询顾问13 </a>
                         </li>
                         <li>
-                            <a href="#">咨询顾问14 </a>
+                            <a href="../info/info-2.html">咨询顾问14 </a>
                         </li>
                     </ul>
                 </div>
@@ -189,9 +189,9 @@
     <footer>
         <div class='footer-box'>
             <div class="footer-link">
-                <a href="#" target="_blank" title="意见反馈">意见反馈</a>
-                <a href="#" target="_blank" title="友情链接">友情链接</a>
-                <a href="#" target="_blank" title="友情链接">管理登录</a>
+                <a href="../info/info-1.html" target="_blank" title="意见反馈">意见反馈</a>
+                <a href="../info/info-1.html" target="_blank" title="友情链接">友情链接</a>
+                <a href="../info/info-1.html" target="_blank" title="友情链接">管理登录</a>
 
             </div>
             <div class='footer-copyright'>
