--- a/pages/consult2.html
+++ b/pages/consult2.html
@@ -105,7 +105,7 @@
                         <img src="../images/consult1.png" alt="">
                     </div>
                     <div class="line">
-                        <a href="#">咨询培训</a>
+                        <a href="../info/info-1.html">咨询培训</a>
                     </div>
                 </div>
 
@@ -137,46 +137,46 @@
                 <div class="detail">
                     <ul>
                         <li>
-                            <a href="#">企业策划1 </a>
+                            <a href="../info/info-1.html">企业策划1 </a>
                         </li>
                         <li>
-                            <a href="#">企业策划2</a>
+                            <a href="../info/info-2.html">企业策划2</a>
                         </li>
                         <li>
-                            <a href="#">企业策划3 </a>
+                            <a href="../info/info-3.html">企业策划3 </a>
                         </li>
                         <li>
-                            <a href="#">企业策划4 </a>
+                            <a href="../info/info-4.html">企业策划4 </a>
                         </li>
                         <li>
-                            <a href="#">企业策划5 </a>
+                            <a href="../info/info-5.html">企业策划5 </a>
                         </li>
                         <li>
-                            <a href="#">企业策划6 </a>
+                            <a href="../info/info-6.html">企业策划6 </a>
                         </li>
                         <li>
-                            <a href="#">企业策划7 </a>
+                            <a href="../info/info-7.html">企业策划7 </a>
                         </li>
                         <li>
-                            <a href="#">企业策划8 </a>
+                            <a href="../info/info-8.html">企业策划8 </a>
                         </li>
                         <li>
-                            <a href="#">企业策划9 </a>
+                            <a href="../info/info-9.html">企业策划9 </a>
                         </li>
                         <li>
-                            <a href="#">企业策划10 </a>
+                            <a href="../info/info-10.html">企业策划10 </a>
                         </li>
                         <li>
-                            <a href="#">企业策划11</a>
+                            <a href="../info/info-11.html">企业策划11</a>
                         </li>
                         <li>
-                            <a href="#">企业策划12 </a>
+                            <a href="../info/info-12.html">企业策划12 </a>
                         </li>
                         <li>
-                            <a href="#">企业策划13 </a>
+                            <a href="../info/info-1.html">企业策划13 </a>
                         </li>
                         <li>
-                            <a href="#">企业策划14 </a>
+                            <a href="../info/info-2.html">企业策划14 </a>
                         </li>
                     </ul>
                 </div>
@@ -188,9 +188,9 @@
     <footer>
         <div class='footer-box'>
             <div class="footer-link">
-                <a href="#" target="_blank" title="意见反馈">意见反馈</a>
-                <a href="#" target="_blank" title="友情链接">友情链接</a>
-                <a href="#" target="_blank" title="友情链接">管理登录</a>
+                <a href="../info/info-1.html" target="_blank" title="意见反馈">意见反馈</a>
+                <a href="../info/info-1.html" target="_blank" title="友情链接">友情链接</a>
+                <a href="../info/info-1.html" target="_blank" title="友情链接">管理登录</a>
 
             </div>
             <div class='footer-copyright'>
