--- a/pages/news1.html
+++ b/pages/news1.html
@@ -134,54 +134,54 @@
                     流通所新闻
                 </div>
                 <div class="detail">
-                    <ul>
-                        <li>
-                            <a href="#">“一带一路”背景下广州商贸如何走出去——王先庆教授与广州商业总会荀会长交流合作
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">重磅：“华南商界名家百人系列讲座”下周开启——广百物流高艺林董事长首谈物流成本</a>
-                        </li>
-                        <li>
-                            <a href="#">互联网背景下生鲜食品流通体系的创新与探索——温氏生鲜食品流通体系产学研合作第三次工作交流会召开
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">王先庆出席2017全国高校贸易经济教学研究会年会</a>
-                        </li>
-                        <li>
-                            <a href="#">王先庆银川给商务部培训中心专题讲座</a>
-                        </li>
-                        <li>
-                            <a href="#">广东财经大学流通经济研究所与湖北康华智慧物流园成立商贸物流产学研基地
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">王先庆：新时期广州商贸业发展大趋势</a>
-                        </li>
-                        <li>
-                            <a href="#">王先庆：产业轻化转型 引领区域创新</a>
-                        </li>
-                        <li>
-                            <a href="#">王先庆等调研广东河源坚基购物中心</a>
-                        </li>
-                        <li>
-                            <a href="#">王先庆出席中国商业经济学会2017第一次副会长会议</a>
-                        </li>
-                        <li>
-                            <a href="#">广东省决策咨询研究基地“商贸物流与电子商务研究中心”获批
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">王先庆出席2017广州白云新城CBD物业发展论坛并作专题报告</a>
-                        </li>
-                        <li>
-                            <a href="#">王先庆给三水校区流通经济学社作讲座</a>
-                        </li>
-                        <li>
-                            <a href="#">广州跨境电子商务学术研讨会广州召开</a>
-                        </li>
-                    </ul>
+                        <ul>
+                                <li>
+                                    <a href="../info/info-1.html">“一带一路”背景下广州商贸如何走出去——王先庆教授与广州商业总会荀会长交流合作
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-2.html">重磅：“华南商界名家百人系列讲座”下周开启——广百物流高艺林董事长首谈物流成本</a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-3.html">互联网背景下生鲜食品流通体系的创新与探索——温氏生鲜食品流通体系产学研合作第三次工作交流会召开
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-4.html">王先庆出席2017全国高校贸易经济教学研究会年会</a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-5.html">王先庆银川给商务部培训中心专题讲座</a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-6.html">广东财经大学流通经济研究所与湖北康华智慧物流园成立商贸物流产学研基地
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-7.html">王先庆：新时期广州商贸业发展大趋势</a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-8.html">王先庆：产业轻化转型 引领区域创新</a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-9.html">王先庆等调研广东河源坚基购物中心</a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-10.html">王先庆出席中国商业经济学会2017第一次副会长会议</a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-1">广东省决策咨询研究基地“商贸物流与电子商务研究中心”获批
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-11.html">王先庆出席2017广州白云新城CBD物业发展论坛并作专题报告</a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-12.html">王先庆给三水校区流通经济学社作讲座</a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-1.html">广州跨境电子商务学术研讨会广州召开</a>
+                                </li>
+                            </ul>
                 </div>
                 <!--分页组件-->
                 <div class="pageBox" id="box"></div>
