--- a/pages/archi3.html
+++ b/pages/archi3.html
@@ -109,7 +109,7 @@
                                         <img src="../images/research1.png" alt="">
                                     </div>
                                     <div class="line">
-                                        <a href="#">科研成果</a>
+                                        <a href="../info/info-1.html">科研成果</a>
                                     </div>
                                 </div>
                                 <!--左侧导航栏-->
@@ -140,46 +140,46 @@
                                 <div class="detail">
                                     <ul>
                                         <li>
-                                            <a href="#">研究报告1 </a>
+                                            <a href="../info/info-1.html">研究报告1 </a>
                                         </li>
                                         <li>
-                                            <a href="#">研究报告2</a>
+                                            <a href="../info/info-2.html">研究报告2</a>
                                         </li>
                                         <li>
-                                            <a href="#">研究报告3</a>
+                                            <a href="../info/info-3.html">研究报告3</a>
                                         </li>
                                         <li>
-                                            <a href="#">研究报告4 </a>
+                                            <a href="../info/info-4.html">研究报告4 </a>
                                         </li>
                                         <li>
-                                            <a href="#">研究报告5 </a>
+                                            <a href="../info/info-5.html">研究报告5 </a>
                                         </li>
                                         <li>
-                                            <a href="#">研究报告6 </a>
+                                            <a href="../info/info-6.html">研究报告6 </a>
                                         </li>
                                         <li>
-                                            <a href="#">研究报告7 </a>
+                                            <a href="../info/info-7.html">研究报告7 </a>
                                         </li>
                                         <li>
-                                            <a href="#">研究报告8 </a>
+                                            <a href="../info/info-8.html">研究报告8 </a>
                                         </li>
                                         <li>
-                                            <a href="#">研究报告9 </a>
+                                            <a href="../info/info-9.html">研究报告9 </a>
                                         </li>
                                         <li>
-                                            <a href="#">研究报告10 </a>
+                                            <a href="../info/info-10.html">研究报告10 </a>
                                         </li>
                                         <li>
-                                            <a href="#">研究报告11</a>
+                                            <a href="../info/info-11.html">研究报告11</a>
                                         </li>
                                         <li>
-                                            <a href="#">研究报告12 </a>
+                                            <a href="../info/info-12.html">研究报告12 </a>
                                         </li>
                                         <li>
-                                            <a href="#">研究报告13</a>
+                                            <a href="../info/info-1.html">研究报告13</a>
                                         </li>
                                         <li>
-                                            <a href="#">研究报告14 </a>
+                                            <a href="../info/info-2.html">研究报告14 </a>
                                         </li>
                                     </ul>
                                 </div>
@@ -192,9 +192,9 @@
                     <footer>
                         <div class='footer-box'>
                             <div class="footer-link">
-                                <a href="#" target="_blank" title="意见反馈">意见反馈</a>
-                                <a href="#" target="_blank" title="友情链接">友情链接</a>
-                                <a href="#" target="_blank" title="友情链接">管理登录</a>
+                                <a href="../info/info-1.html" target="_blank" title="意见反馈">意见反馈</a>
+                                <a href="../info/info-1.html" target="_blank" title="友情链接">友情链接</a>
+                                <a href="../info/info-1.html" target="_blank" title="友情链接">管理登录</a>
 
                             </div>
                             <div class='footer-copyright'>
