--- a/pages/consult3.html
+++ b/pages/consult3.html
@@ -105,7 +105,7 @@
                         <img src="../images/consult1.png" alt="">
                     </div>
                     <div class="line">
-                        <a href="#">咨询培训</a>
+                        <a href="../info/info-1.html">咨询培训</a>
                     </div>
                 </div>
 
@@ -137,46 +137,46 @@
                 <div class="detail">
                     <ul>
                         <li>
-                            <a href="#">专家培训1 </a>
+                            <a href="../info/info-1.html">专家培训1 </a>
                         </li>
                         <li>
-                            <a href="#">专家培训2</a>
+                            <a href="../info/info-2.html">专家培训2</a>
                         </li>
                         <li>
-                            <a href="#">专家培训3 </a>
+                            <a href="../info/info-3.html">专家培训3 </a>
                         </li>
                         <li>
-                            <a href="#">专家培训4 </a>
+                            <a href="../info/info-4.html">专家培训4 </a>
                         </li>
                         <li>
-                            <a href="#">专家培训5 </a>
+                            <a href="../info/info-5.html">专家培训5 </a>
                         </li>
                         <li>
-                            <a href="#">专家培训6 </a>
+                            <a href="../info/info-6.html">专家培训6 </a>
                         </li>
                         <li>
-                            <a href="#">专家培训7 </a>
+                            <a href="../info/info-7.html">专家培训7 </a>
                         </li>
                         <li>
-                            <a href="#">专家培训8 </a>
+                            <a href="../info/info-8.html">专家培训8 </a>
                         </li>
                         <li>
-                            <a href="#">专家培训9 </a>
+                            <a href="../info/info-9.html">专家培训9 </a>
                         </li>
                         <li>
-                            <a href="#">专家培训10 </a>
+                            <a href="../info/info-10.html">专家培训10 </a>
                         </li>
                         <li>
-                            <a href="#">专家培训11</a>
+                            <a href="../info/info-11.html">专家培训11</a>
                         </li>
                         <li>
-                            <a href="#">专家培训12 </a>
+                            <a href="../info/info-12.html">专家培训12 </a>
                         </li>
                         <li>
-                            <a href="#">专家培训13 </a>
+                            <a href="../info/info-1.html">专家培训13 </a>
                         </li>
                         <li>
-                            <a href="#">专家培训14 </a>
+                            <a href="../info/info-2.html">专家培训14 </a>
                         </li>
                     </ul>
                 </div>
@@ -187,9 +187,9 @@
         <footer>
             <div class='footer-box'>
                 <div class="footer-link">
-                    <a href="#" target="_blank" title="意见反馈">意见反馈</a>
-                    <a href="#" target="_blank" title="友情链接">友情链接</a>
-                    <a href="#" target="_blank" title="友情链接">管理登录</a>
+                    <a href="../info/info-1.html" target="_blank" title="意见反馈">意见反馈</a>
+                    <a href="../info/info-1.html" target="_blank" title="友情链接">友情链接</a>
+                    <a href="../info/info-1.html" target="_blank" title="友情链接">管理登录</a>
 
                 </div>
                 <div class='footer-copyright'>
