--- a/pages/research3.html
+++ b/pages/research3.html
@@ -135,50 +135,50 @@
                     成果影响
                 </div>
                 <div class="detail">
-                    <ul>
-                        <li>
-                            <a href="#">成果影响1 </a>
-                        </li>
-                        <li>
-                            <a href="#">成果影响2</a>
-                        </li>
-                        <li>
-                            <a href="#">成果影响3 </a>
-                        </li>
-                        <li>
-                            <a href="#">成果影响4 </a>
-                        </li>
-                        <li>
-                            <a href="#">成果影响5 </a>
-                        </li>
-                        <li>
-                            <a href="#">成果影响6 </a>
-                        </li>
-                        <li>
-                            <a href="#">成果影响7 </a>
-                        </li>
-                        <li>
-                            <a href="#">成果影响8 </a>
-                        </li>
-                        <li>
-                            <a href="#">成果影响9 </a>
-                        </li>
-                        <li>
-                            <a href="#">成果影响10 </a>
-                        </li>
-                        <li>
-                            <a href="#">成果影响11</a>
-                        </li>
-                        <li>
-                            <a href="#">成果影响12 </a>
-                        </li>
-                        <li>
-                            <a href="#">成果影响13 </a>
-                        </li>
-                        <li>
-                            <a href="#">成果影响14 </a>
-                        </li>
-                    </ul>
+                        <ul>
+                                <li>
+                                    <a href="../info/info-1.html">彭雷清教授申报课题获教育部一般项目立项 </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-2.html">湖北康华集团董事长黄文华一行到访流通所考察</a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-3.html">邓华平：智慧物流与多式联运的探索（华南商界百人名家系列讲座 第28讲） </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-4.html">王先庆受邀参加2017广州商界新春大会 </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-5.html">阳东区商业网点规划调研组赴阳江市调研 </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-6.html">广州现代物流与电子商务发展研究基地2016年度科研课题立项通知 </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-7.html">王先庆出席海珠区江南西步行街项目座谈会 </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-8.html">广州市哲学社会科学发展“十三五”规划2016年度课题指南 </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-9.html">打造商贸中心和特色旅游中心 </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-10.html">王先庆：佛山市打造“互联网+家具产业”发展新模式 </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-11.html">专家为三水高铁经济建言 7大对策指出发展方向 </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-12.html">王先庆：东莞沙田打造新兴区域商贸中心 </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-11.html">广东省人民政府关于促进内贸流通健康发展的实施意见 </a>
+                                </li>
+                                <li>
+                                    <a href="../info/info-12.html">召开“十三五”商贸服务业发展规划座谈会 </a>
+                                </li>
+                            </ul>
                 </div>
                 <!--分页组件-->
                 <div class="pageBox" id="box"></div>
